--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,18 +132,24 @@
         \u0020\u0020这些信息无法定位到您，我们也不会使用这些信息尝试对您定位。收集这些信息仅用于定位软件问题与解决问题。我们会尽最大努力保证您的隐私与数据安全。
     </string>
 
-    <string name="login_fail">登录失败, 请稍后重试</string>
-    <string name="login_net_bkjw">请连接校园网后重试</string>
-    <string name="login_fail_ck">验证码错误，登录失败</string>
-    <string name="login_fail_pwd">密码错误，登录失败</string>
-    <string name="login_fail_bkjw">教务密码错误，登录失败</string>
-    <string name="login_fail_getInfo">获取个人信息失败，请稍后重试</string>
-    <string name="log_change_pwd">即将为您打开修改智慧校园/VPN密码的网页，请连接校园网。\n\n 登录成功后，输入原密码和新密码(包含大小写和数字)确认即可。\n\n Tip:本次只会修改智慧校园和VPN登录密码，不会修改教务系统的密码，密码修改后可能需要一段儿时间才会生效。</string>
+    <string name="login_fail">登录失败, 请稍后重试，请点击右上角问号查看帮助</string>
+    <string name="login_net_bkjw">请连接校园网后重试，请点击右上角问号查看帮助</string>
+    <string name="login_fail_ck">验证码错误，登录失败，请点击右上角问号查看帮助</string>
+    <string name="login_fail_pwd">密码错误，登录失败，请点击右上角问号查看帮助</string>
+    <string name="login_fail_bkjw">教务密码错误，登录失败，请点击右上角问号查看帮助</string>
+    <string name="login_fail_getInfo">获取个人信息失败，请稍后重试，请点击右上角问号查看帮助</string>
+    <string name="log_change_pwd">即将为您打开修改智慧校园/VPN密码的网页，请连接校园网。\n\n 登录成功后，输入原密码和新密码(需要同时包含大小写字母、数字和特殊字符)确认即可。\n\n Tip:本次只会修改智慧校园和VPN登录密码，不会修改教务系统的密码，密码修改后可能需要一段儿时间才会生效。</string>
     <string name="log_vpn_net_error">VPN出现网络/未知错误，您可以选择重试，或继续登录(之后仅可使用校园网进行数据同步)。\n\nTip:若VPN系统出现问题，尝试后仍无法登录，请选择“仍然继续”。</string>
     <string name="log_vpn_pwd_error">VPN密码错误，您可以选择重试，或继续登录(之后仅可使用校园网进行数据同步)。\n\nTip:若VPN系统出现问题，尝试后仍无法登录，请选择“仍然继续”。</string>
     <string name="log_vpn_pwd_easy">VPN已禁止使用简单密码登录，请修改密码后重新登录，你也可以选择“仍然继续”，之后仅可使用校园网进行数据同步。</string>
+    <string name="login_help">&#160;&#160;&#160;&#160;目前课程表支持两种登录方式，智慧校园和教务登录，您可以自由选择，功能相同。
+        \n&#160;&#160;&#160;&#160;您需要准备两个密码，智慧校园/VPN登录密码和教务密码。
+        \n&#160;&#160;&#160;&#160;智慧校园方式：请输入智慧校园/VPN登录密码，默认为身份证后6位，但学校不允许使用默认密码登录，请点击登录页面下方的“修改智慧校园/VPN登录密码”按钮进行快捷修改，修改后可以正常登录。
+        \n&#160;&#160;&#160;&#160;教务登录方式：第一个密码请输入教务密码，默认为身份证后6位，您可以使用校园网在浏览器中输入：http://172.16.13.22/进行尝试；第二个密码请输入智慧校园/VPN登录密码，详情请看上一段。
+        \n&#160;&#160;&#160;&#160;偶尔学校网络会不稳定或者VPN被关闭，登录失败出现弹窗可以选择“仍然继续”，使用校园网进行数据同步。
+        \n&#160;&#160;&#160;&#160;若您是新生或者尝试后仍然无法解决，请加入QQ群：963908505(在关于页面可以一键加群)，我们会帮您解决！</string>
 
-    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.89 Safari/537.36</string>
+    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36 Edg/91.0.864.64</string>
     <string name="cookie_delimiter">"; "</string>
     <string name="thanks_person">Casual | 就这 | ୧⍤⃝ⓍⓅ乏了 | 我终究不是个好人 | 🍓  |  sin²  |  沉山浮阳 | 迷 | 稚隳 </string>
 
