perf:删除非必须的权限声明 perf:自动登录添加等待动画

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,7 +130,7 @@
         \u0020\u0020当你登录教务账号后，用于获取教务数据，更新课表和考试安排等信息\n
         \u0020\u0020以上申请的权限，我们只用于必要的功能之中，不会收集您的隐私。若您选择拒绝授权，则只是相应功能无法使用或查看，不会影响应用整体使用。\n
         \u0020\u0020我们的产品或服务可能包括第三方的产品或服务，当您使用这些产品或服务时，也可能收集并使用您的信息以为您提供服务。\n
-        \u0020\u0020这些信息无法定位到您，我们也不会使用这些信息尝试对您定位。收集这些信息仅用于定位软件问题与解决问题。我们会尽最大努力保证您的隐私与数据安全。
+        \u0020\u0020收集这些信息仅用于定位软件问题与解决问题。我们会尽最大努力保证您的隐私与数据安全。
     </string>
 
     <string name="login_fail">登录失败, 请稍后重试，请点击右上角问号查看帮助</string>
