更新4.3.0(43)修改部分文案

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,7 +143,7 @@
     <string name="log_vpn_net_error">VPN出现网络/未知错误，您可以选择重试，或继续登录(之后仅可使用校园网进行数据同步)。\n\nTip:若VPN系统出现问题，尝试后仍无法登录，请选择“仍然继续”。</string>
     <string name="log_vpn_pwd_error">VPN密码错误，您可以选择重试，或继续登录(之后仅可使用校园网进行数据同步)。\n\nTip:若VPN系统出现问题，尝试后仍无法登录，请选择“仍然继续”。</string>
     <string name="log_vpn_pwd_easy">VPN已禁止使用简单密码登录，请修改密码后重新登录，你也可以选择“仍然继续”，之后仅可使用校园网进行数据同步。</string>
-    <string name="login_help">&#160;&#160;&#160;&#160;目前课程表支持两种登录方式，智慧校园和教务登录，您可以自由选择，功能相同。
+    <string name="login_help">&#160;&#160;&#160;&#160;目前课程表支持两种登录方式，智慧校园和教务登录，您可以自由选择，功能相同(建议使用校园网进行登录和数据同步！)。
         \n&#160;&#160;&#160;&#160;您需要准备两个密码，智慧校园/VPN登录密码和教务密码。
         \n&#160;&#160;&#160;&#160;智慧校园方式：请输入智慧校园/VPN登录密码，默认为身份证后6位，但学校不允许使用默认密码登录，请点击登录页面下方的“修改智慧校园/VPN登录密码”按钮进行快捷修改，修改后可以正常登录。
         \n&#160;&#160;&#160;&#160;教务登录方式：第一个密码请输入教务密码，默认为身份证后6位，您可以使用校园网在浏览器中输入：http://172.16.13.22/进行尝试；第二个密码请输入智慧校园/VPN登录密码，详情请看上一段。
