--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,20 +48,6 @@
     <string name="lan_get_experimentscore_url">/student/getstulab</string>
     <string name="lan_get_resit_url">/student/getbk</string>
 
-    <!-- 评价教师 -->
-    <string name="lan_get_this_term">/student/temsterm</string>
-    <string name="lan_get_teacher_list">/student/getpjcno</string>
-    <string name="lan_get_avg_thacher_data">/student/jxpgdata</string>
-    <string name="lan_save_avg_teacher_data">/student/SaveJxpg</string>
-    <string name="lan_commit_avg_teacher_data">/student/SaveJxpgJg/1</string>
-
-    <!--教材评价-->
-    <string name="lan_get_textbook_list">http://172.16.13.22/student/GetText</string>
-    <string name="lan_get_textbook_form">http://172.16.13.22/student/GetTextzb</string>
-    <string name="lan_get_textbook_avg_state">http://172.16.13.22/student/gettextjg</string>
-    <string name="lan_save_avg_textbook_data">http://172.16.13.22/student/savetextpj</string>
-    <string name="lan_commit_avg_textbook_data">http://172.16.13.22/student/Savepx/1</string>
-
     <!--毕业课程-->
     <string name="lan_update_effective_credits">/student/genyxxf</string>
     <string name="lan_get_effective_credits">/student/Getyxxf</string>
@@ -139,14 +125,13 @@
     <string name="login_fail_pwd">密码错误，登录失败，请点击右上角问号查看帮助</string>
     <string name="login_fail_bkjw">教务密码错误，登录失败，请点击右上角问号查看帮助</string>
     <string name="login_fail_getInfo">获取个人信息失败，请稍后重试，请点击右上角问号查看帮助</string>
-    <string name="log_change_pwd">即将为您打开修改智慧校园/VPN密码的网页，请连接校园网。\n\n 登录成功后，输入原密码和新密码(需要同时包含大小写字母、数字和特殊字符)确认即可。\n\n Tip:本次只会修改智慧校园和VPN登录密码，不会修改教务系统的密码，密码修改后可能需要一段儿时间才会生效。</string>
+    <string name="log_change_pwd">即将为您打开修改智慧校园密码的网页，请连接校园网。\n\n 登录成功后，输入原密码和新密码(需要同时包含大小写字母、数字和特殊字符)确认即可。\n\n Tip:本次只会修改智慧校园登录密码，不会修改教务系统的密码，密码修改后可能需要一段儿时间才会生效。</string>
     <string name="log_vpn_net_error">VPN出现网络/未知错误，您可以选择重试，或继续登录(之后仅可使用校园网进行数据同步)。\n\nTip:若VPN系统出现问题，尝试后仍无法登录，请选择“仍然继续”。</string>
     <string name="log_vpn_pwd_error">VPN密码错误，您可以选择重试，或继续登录(之后仅可使用校园网进行数据同步)。\n\nTip:若VPN系统出现问题，尝试后仍无法登录，请选择“仍然继续”。</string>
     <string name="log_vpn_pwd_easy">VPN已禁止使用简单密码登录，请修改密码后重新登录，你也可以选择“仍然继续”，之后仅可使用校园网进行数据同步。</string>
-    <string name="login_help">&#160;&#160;&#160;&#160;目前课程表支持两种登录方式，智慧校园和教务登录，您可以自由选择，功能相同(建议使用校园网进行登录和数据同步！)。
-        \n&#160;&#160;&#160;&#160;您需要准备两个密码，智慧校园/VPN登录密码和教务密码。
-        \n&#160;&#160;&#160;&#160;智慧校园方式：请输入智慧校园/VPN登录密码，默认为身份证后6位，但学校不允许使用默认密码登录，请点击登录页面下方的“修改智慧校园/VPN登录密码”按钮进行快捷修改，修改后可以正常登录。
-        \n&#160;&#160;&#160;&#160;教务登录方式：第一个密码请输入教务密码，默认为身份证后6位，您可以使用校园网在浏览器中输入：http://172.16.13.22/进行尝试；第二个密码请输入智慧校园/VPN登录密码，详情请看上一段。
+    <string name="login_help">&#160;&#160;&#160;&#160;请输入智慧校园密码进行登录(建议使用校园网进行登录和数据同步！)。
+        \n&#160;&#160;&#160;&#160;非国际学院学生请使用智慧校园方式：请输入智慧校园登录密码，默认为身份证后6位，但学校不允许使用默认密码登录，请点击登录页面下方的“修改智慧校园登录密码”按钮进行快捷修改，修改后可以正常登录。
+        \n&#160;&#160;&#160;&#160;国际学院学生请使用教务登录方式：第一个密码请输入教务密码，默认为身份证后6位，您可以使用校园网在浏览器中输入：http://172.16.13.22/进行尝试；第二个密码请输入智慧校园登录密码，详情请看上一段。
         \n&#160;&#160;&#160;&#160;偶尔学校网络会不稳定或者VPN被关闭，登录失败出现弹窗可以选择“仍然继续”，使用校园网进行数据同步。
         \n&#160;&#160;&#160;&#160;若您是新生或者尝试后仍然无法解决，请加入QQ群：963908505(在关于页面可以一键加群)，我们会帮您解决！</string>
 
@@ -162,7 +147,6 @@
     <string name="lan_get_selected_course"> http://172.16.13.22/student/GetSctCourse </string>
 
     <!-- 更多功能 -->
-    <string name="text_test"> 测试 </string>
 
     <string name="titleBar_1">日课表</string>
     <string name="titleBar_3">更多功能</string>
@@ -170,7 +154,6 @@
     <string name="moreFun_jiaowu"> 教务查询 </string>
     <string name="moreFun_biye"> 毕业相关 </string>
     <string name="moreFun_lianjie"> 常用链接 </string>
-    <string name="moreFun_pingjia"> 快速评价 </string>
     <string name="moreFun_test_schedule"> 考试安排 </string>
     <string name="moreFun_credits"> 学分绩 </string>
     <string name="moreFun_test_scores"> 考试成绩 </string>
@@ -187,8 +170,6 @@
     <string name="moreFun_url_index">桂电导航</string>
     <string name="moreFun_qqGroup">资源群聊</string>
     <string name="moreFun_url_more"> 更多链接 </string>
-    <string name="moreFun_evaluating_teachers"> 评价教师 </string>
-    <string name="moreFun_evaluating_textbooks"> 评价教材 </string>
     <string name="course_add">添加课程</string>
     <string name="course_delete">删除课程</string>
     <string name="person_login">点击登录</string>
@@ -206,22 +187,20 @@
     <string name="person_help_test">协助测试</string>
     <string name="person_help_me">支持开发者</string>
     <string name="person_setting">设置</string>
-    <string name="first_login_help">输入智慧校园的密码，若之前没有登录过，需要先在浏览器上登录一次，成功后即可在APP上正常登录，若不知道密码，请联系辅导员或加群寻求帮助；点击下方按钮进行首次登录。(国际学院学生请使用教务登录方式)</string>
     <string name="moreFun_innovation_score">创新积分</string>
     <string name="more_func_empty">暂无数据</string>
     <string name="more_func_fail">加载失败</string>
     <string name="hint_account">请输入学号</string>
     <string name="hint_BKJW_password">请输入教务密码</string>
-    <string name="hint_vpn_password">请输入智慧校园(VPN)密码</string>
+    <string name="hint_vpn_password">请输入智慧校园密码</string>
     <string name="remember_password">记住密码</string>
     <string name="login">登录</string>
-    <string name="first_login">第一次登录智慧校园</string>
-    <string name="change_password">&#160;&#160;修改智慧校园/VPN登录密码&#160;&#160;</string>
+    <string name="change_password">&#160;&#160;修改智慧校园登录密码&#160;&#160;</string>
 
     <string name="widget_tip_empty">今日暂无课程~</string>
     <string name="widget_week_empty">第X周</string>
 
-    <string name="patch_version">1</string>
+    <string name="patch_version">0</string>
     <string name="gradesHint">学分绩查询属于公测阶段，正在逐步优化，目前计算方法为只统计对应年度及格的必修和限选课程，若您有更好的计算方法，欢迎进群反馈，我们一起让它变好！(V4)</string><!-- 发布新版本请归零 -->
 
 </resources>
