--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,8 @@
     <string name="url_lijiang">http://www.gxljxt.cn/</string>
     <string name="url_lijiang_vpn">https://v.guet.edu.cn/http/77726476706e69737468656265737421e7e056d22028645a661cc7af96/</string>
     <string name="downloadApp_url">https://www.coolapk.com/apk/279989</string>
-    <string name="url_change_vpn_pwd">https://172.18.8.21:4102/auth?service=https%3A%2F%2F172.18.8.21%3A4102%2F%23%2Fpassword%2FpasswordModify</string>
+    <string name="url_change_vpn_pwd">https://cas.guet.edu.cn/retrieve-password/retrievePassword/index.html#/</string>
+    <string name="url_activate_account">https://cas.guet.edu.cn/retrieve-password/accountActivation/index.html#/</string>
 
     <string name="text_school_song">桂电校歌</string>
     <string name="url_school_song">https://music.163.com/#/song?id=469744200</string>
@@ -132,12 +133,11 @@
     <string name="log_vpn_pwd_error">VPN密码错误，您可以选择重试，或继续登录(之后仅可使用校园网进行数据同步)。\n\nTip:若VPN系统出现问题，尝试后仍无法登录，请选择“仍然继续”。</string>
     <string name="log_vpn_pwd_easy">VPN已禁止使用简单密码登录，请修改密码后重新登录，你也可以选择“仍然继续”，之后仅可使用校园网进行数据同步。</string>
     <string name="login_help">&#160;&#160;&#160;&#160;请输入智慧校园密码进行登录(建议使用校园网进行登录和数据同步！)。
-        \n&#160;&#160;&#160;&#160;非国际学院学生：请输入智慧校园登录密码，默认为身份证后6位，但学校不允许使用默认密码登录，请点击登录页面下方的“修改智慧校园密码”按钮进行快捷修改，修改后可以正常登录。
-        \n&#160;&#160;&#160;&#160;国际学院学生：第一个密码请输入教务密码，默认为身份证后6位，您可以使用校园网在浏览器中输入：https://gyjxgl.guet.edu.cn/进行尝试；第二个密码请输入智慧校园登录密码，详情请看上一段。
+        \n&#160;&#160;&#160;&#160;请确保使用网页可以正常进入教务系统，由于学校更换系统，所有账号均需要激活后才能使用，请点击“激活账户“按钮进行激活。
         \n&#160;&#160;&#160;&#160;偶尔学校网络会不稳定或者VPN被关闭，登录失败出现弹窗可以选择“仍然继续”，使用校园网进行数据同步。
         \n&#160;&#160;&#160;&#160;若您是新生或者尝试后仍然无法解决，请加入QQ群(在关于页面可以一键加群)，我们会帮您解决！</string>
 
-    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36 Edg/91.0.864.64</string>
+    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/110.0.0.0 Safari/537.36 Edg/110.0.1587.41</string>
     <string name="cookie_delimiter">"; "</string>
     <string name="thanks_person">Casual | 就这 | ୧⍤⃝ⓍⓅ乏了 | 我终究不是个好人 | 🍓  |  sin²  |  沉山浮阳 | 迷 | 稚隳 </string>
 
@@ -200,11 +200,11 @@
     <string name="more_func_empty">暂无数据</string>
     <string name="more_func_fail">加载失败</string>
     <string name="hint_account">请输入学号</string>
-    <string name="hint_BKJW_password">请输入教务密码</string>
     <string name="hint_vpn_password">请输入智慧校园密码</string>
     <string name="remember_password">记住密码</string>
     <string name="login">登录</string>
     <string name="find_password">&#160;&#160;找回密码&#160;&#160;</string>
+    <string name="activate_account">&#160;&#160;激活账号&#160;&#160;</string>
 
     <string name="widget_tip_empty">今日暂无课程~</string>
     <string name="widget_week_empty">第X周</string>
