--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,10 @@
     <string name="vpn_get_cookie">https://v.guet.edu.cn/wengine-vpn/cookie?method=get&amp;host=cas.guet.edu.cn&amp;scheme=https&amp;path=/authserver/login</string>
     <string name="url_Authserver">https://cas.guet.edu.cn/authserver/login</string>
     <string name="url_Authserver_VPN">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/authserver/login</string>
-
-
-
+    <string name="url_SendPhoneOTP">https://cas.guet.edu.cn/authserver/dynamicCode/getDynamicCodeByReauth.do</string>
+    <string name="url_SendPhoneOTP_VPN">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/authserver/dynamicCode/getDynamicCodeByReauth.do</string>
+    <string name="url_ReAuth">https://cas.guet.edu.cn/authserver/reAuthCheck/reAuthSubmit.do</string>
+    <string name="url_ReAuth_VPN">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/authserver/reAuthCheck/reAuthSubmit.do</string>
     <string name="SSO_context_type">application/x-www-form-urlencoded;charset=UTF-8</string>
     <string name="SSO_referer">https://cas.guet.edu.cn/</string>
     <string name="service_bkjw">service=https%3A%2F%2Fbkjw.guet.edu.cn</string>
@@ -120,6 +121,7 @@
     <string name="login_fail_ck">验证码错误，登录失败，请点击右上角问号查看帮助</string>
     <string name="login_fail_pwd">密码错误，登录失败，请点击右上角问号查看帮助</string>
     <string name="login_fail_bkjw">教务密码错误，登录失败，请点击右上角问号查看帮助</string>
+    <string name="login_fail_phoneOTPSend">验证码发送失败:</string>
     <string name="login_fail_getInfo">获取个人信息失败，请稍后重试，请点击右上角问号查看帮助</string>
     <string name="log_change_pwd">即将为您打开修改智慧校园密码的网页，请连接校园网。\n\n 登录成功后，输入原密码和新密码(需要同时包含大小写字母、数字和特殊字符)确认即可。\n\n Tip:本次只会修改智慧校园登录密码，不会修改教务系统的密码，密码修改后可能需要一段儿时间才会生效。</string>
     <string name="login_help">&#160;&#160;&#160;&#160;请输入智慧校园密码进行登录(建议使用校园网进行登录和数据同步！)。
@@ -187,6 +189,11 @@
     <string name="hint_vpn_password">请输入智慧校园密码</string>
     <string name="remember_password">记住密码</string>
     <string name="login">登录</string>
+    <string name="login_2fa_phoneotp">登录二次验证-手机验证码</string>
+    <string name="hint_2fa_phoneotp">请输入手机验证码</string>
+    <string name="hint_2fa_phone">验证码已发送至:</string>
+    <string name="hint_captcha">请输入验证码</string>
+    <string name="hint_send_phone_otp">发送短信</string>
     <string name="find_password">&#160;&#160;找回密码&#160;&#160;</string>
     <string name="activate_account">&#160;&#160;激活账号&#160;&#160;</string>
 
