feat:自动设置学期/星期 feat:支持小学期合并到第二学期 perf:去掉自定义异常上报功能 perf:升级友盟依赖

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,6 +171,7 @@
     <string name="hint_account">请输入学号</string>
     <string name="hint_vpn_password">请输入智慧校园密码</string>
     <string name="remember_password">记住密码</string>
+    <string name="auto_term">自动设置日期</string>
     <string name="login">登录</string>
     <string name="cancel">取消</string>
     <string name="login_2fa_smscode">登录二次验证-手机验证码</string>
