feat:添加一个合作位

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,7 +149,7 @@
     <string name="moreFun_tools">常用工具</string>
     <string name="moreFun_course_arrange">教学安排</string>
     <string name="moreFun_empty_room">空教室查询</string>
-    <string name="moreFun_tool_group">万能群</string>
+    <string name="moreFun_tool_group">桂电万能群</string>
 
     <string name="course_add">添加课程</string>
     <string name="course_delete">删除课程</string>
