--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="lan_get_effective_credits">/student/Getyxxf</string>
     <string name="lan_get_planned_credits">/student/getplancj</string>
 
-    <string name="url_smart_campus">http://icampus.guet.edu.cn/</string>
+    <string name="url_smart_campus">https://pcportal.guet.edu.cn/</string>
     <string name="url_graduation_project">https://co2.cnki.net/Login.html?dp=gliet&amp;r=1640591310211</string>
     <string name="url_vpn">https://v.guet.edu.cn/</string>
     <string name="url_lijiang">http://www.gxljxt.cn/</string>
@@ -138,6 +138,7 @@
     <string name="moreFun_plan_courses"> 计划课程 </string>
     <string name="moreFun_cet"> CET成绩 </string>
     <string name="moreFun_url_bkjw"> 教务系统 </string>
+    <string name="moreFun_url_bkjw_test"> 教务系统[新] </string>
     <string name="moreFun_url_vpn"> 校内VPN </string>
     <string name="moreFun_url_campus"> 智慧校园 </string>
     <string name="moreFun_url_lijiang"> 漓江学堂 </string>
