--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,7 +177,7 @@
     <string name="auto_term">自动设置日期</string>
     <string name="login">登录</string>
     <string name="cancel">取消</string>
-    <string name="login_2fa_smscode">登录二次验证-手机验证码</string>
+    <string name="login_2fa_smscode">需要手机验证码</string>
     <string name="hint_2fa_smscode">请输入手机验证码</string>
     <string name="hint_2fa_phone">验证码已发送至:</string>
     <string name="hint_captcha">请输入验证码</string>
